--- a/Main_Project/index.html
+++ b/Main_Project/index.html
@@ -11,6 +11,12 @@
     <title>Hospitality Management Web Design | Welcome</title>
     <link rel="stylesheet" href="/css/style.css">
     <script type="text/javascript" src="js/validation.js"></script>
+    <script type="text/javascript">
+        function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+        }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
   </head>
   <body>
     <header>
@@ -73,6 +79,7 @@
 
     <footer>
       <p>Hospitality Management Web Design, Copyright &copy; 2018</p>
+      <div id="google_translate_element"></div>
     </footer>
   </body>
 </html>
