--- a/Main_Project/index.html
+++ b/Main_Project/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Hospitality Management">
     <meta name="author" content="Rohit Jagannath">
     <title>Hospitality Management Web Design | Welcome</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="js/validation.js"></script>
     <script type="text/javascript">
         function googleTranslateElementInit() {
