--- a/Main_Project/host_listing.html
+++ b/Main_Project/host_listing.html
@@ -8,6 +8,7 @@
     <!-- Meta data for info on the website -->
     <meta name="description" content="Hospitality Management">
     <title>Hospitality Management Web Design</title>
+    <link rel="stylesheet" href="css/style_rohini.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,10 +22,9 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
-                <!--<li><a href="registration.html">SignUp</a></li>-->
-    			      <li><a href="signup.html">SignUp</a></li>
+    		<li><a href="signup.html">SignUp</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li class="current"><a href="host_listing.html">Want to be a host?</a></li>
+                <li class="current"><a href="#">Want to be a host?</a></li>
               </ul>
             </nav>
         </div>
