--- a/Main_Project/signup.html
+++ b/Main_Project/signup.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Hospitality Management">
     <title>Hospitality Management Web Design</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_rohini.css">
     <script type="text/javascript" src="js/validation.js"></script>
 </head>
 <body>
@@ -22,8 +23,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="services.html">Services</a></li>
-                  <!--<li><a href="registration.html">SignUp</a></li>-->
-                  <li class="current"><a href="signup.html">SignUp</a></li>
+                  <li class="current"><a href="#">SignUp</a></li>
                   <li><a href="login.html">Login</a></li>
                   <li><a href="host_listing.html">Want to be a host?</a></li>
                 </ul>
